--- a/css/index-main.css
+++ b/css/index-main.css
@@ -34,6 +34,7 @@
     width: 240px;
     border-width: 4px;
     border-radius: 50%;
+    object-position: -18px;
     border-color: var(--light-color);
     border-style: solid;
 }
@@ -59,6 +60,7 @@
         height: 320px;
         width: 320px;
         border-width: 4px;
+        object-position: 0;
     }
 }
 
