--- a/css/index-theory.css
+++ b/css/index-theory.css
@@ -1,12 +1,13 @@
 .theory {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
     grid-template-areas:
             "t t t"
             "l c r"
             "l k r"
-            "l b r";
+            "l b r"
+            "l n r";
     background-color: var(--back2-color);
 }
 
@@ -63,7 +64,15 @@
     background-image: url(plant.svg);
 }
 
-.cold, .keratin, .botoks {
+.n-container {
+    grid-area: n;
+}
+
+.nano {
+    background-image: url(molecule.svg);
+}
+
+.cold, .keratin, .botoks, .nano {
     background-color: var(--back-color);
     margin: 12px;
     box-shadow: 8px 8px 4px var(--text-color);
@@ -71,6 +80,9 @@
     max-width: 420px;
     background-size: cover;
     padding: 8px;
+    border-color: var(--light-color);
+    border-width: 6px;
+    border-style: solid;
 }
 
 @media (min-width: 640px) {
@@ -78,8 +90,9 @@
         grid-template-columns: auto 320px 320px auto;
         grid-template-rows: auto auto;
         grid-template-areas:
-            "l t c r"
-            "l k b r";
+            "l t t r"
+            "l c k r"
+            "l b n r";
     }
 
     .theory__left-container {
@@ -88,9 +101,11 @@
 
     .cold,
     .keratin,
-    .botoks {
+    .botoks,
+    .nano {
         background-color: var(--back-color);
         margin: 24px;
+        border-width: 8px;
     }
 .theory__left-container {
     font-size: 20px;
@@ -102,17 +117,19 @@
         grid-template-columns: auto 320px 320px 320px auto;
         grid-template-rows: auto auto;
         grid-template-areas:
-                "l t t t r"
-                "l c k b r";
+                "l t t c r"
+                "l k b n r";
     }
 .theory__left-container {
     margin: 32px;
 }
 .cold,
 .keratin,
-.botoks {
+.botoks,
+.nano {
     background-color: var(--back-color);
     margin: 32px;
+    border-width: 12px;
 }
 }
 
@@ -125,9 +142,11 @@
 }
 .cold,
 .keratin,
-.botoks {
+.botoks,
+.nano {
     background-color: var(--back-color);
     margin: 40px;
+    border-width: 16px;
 }
 .theory__left-container {
     font-size: 24px;
