--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,5 @@
 @import url(index-main.css);
 @import url(index-about.css);
 @import url(index-theory.css);
+@import url(index-practice.css);
+@import url(index-footer.css);
