--- a/css/index-theory.css
+++ b/css/index-theory.css
@@ -74,7 +74,7 @@
 
 .cold, .keratin, .botoks, .nano {
     background-color: var(--back-color);
-    margin: 12px;
+    margin: 12px 24px 24px 12px;
     box-shadow: 8px 8px 4px var(--text-color);
     min-height: 200px;
     max-width: 420px;
@@ -83,6 +83,9 @@
     border-color: var(--light-color);
     border-width: 6px;
     border-style: solid;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 @media (min-width: 640px) {
